# learning-python

./: README.md  desafio_sistema_bancario.py  meu_banco.db
db_API/: db_api.py
sistema_bancario/: desafio_sistema_bancario.py  log.txt
tdd-project/: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
tdd-project/store/: main.py  routers.py
tdd-project/store/controllers/: product.py
tdd-project/store/core/: exceptions.py
tdd-project/store/db/: mongo.py
tdd-project/store/models/: base.py
tdd-project/store/schemas/: base.py  product.py
tdd-project/store/usecases/: product.py
tdd-project/tests/: conftest.py  factories.py
tdd-project/tests/controllers/: test_products.py
tdd-project/tests/schemas/: test_product.py
tdd-project/tests/usecases/: test_product.py
workoutAPI/: __init__.py  docker-compose.yml  main.py  requirements.txt  routers.py
workoutAPI/alembic/: env.py
workoutAPI/alembic/versions/: 2713deb1452c_inid_db.py  bd43bea51a8e_fix_autoincrement_in_pk_id_fields.py  c0a5d9d12aa5_criando_tabelas.py
workoutAPI/atleta/: controller.py  models.py  schemas.py
workoutAPI/categorias/: controller.py  models.py  schemas.py
workoutAPI/centro_treinamento/: controller.py  models.py  schemas.py
workoutAPI/configs/: database.py
workoutAPI/contrib/: models.py  schemas.py
workoutAPI/contrib/repository/: dependencies.py
